--- a/src/pages/city/city.html
+++ b/src/pages/city/city.html
@@ -11,19 +11,18 @@
 </ion-header>
 
 <ion-content padding style="color: #006bb6;">
-  <div id="Destination" text-center></div>
-  <!--
-<div id="Plan" [innerHTML]="planhtml|htmlpipe" style="height: 60vh; font-size: large;"></div>
--->
+  <div id="Destination" text-center>
+    <h1>
+      <b>
+    {{Location}}
+  </b>
+  </h1>
+  </div>
+  
 <div style="height: 60vh; font-size: large;">
- <div [ngSwitch]="numplan">
-<div *ngSwitchCase="6">
-  <br><br><h4 text-center>Respond immediately</h4><br><br><br><p text-center>
-    <a href="tel:+911" center ion-button round  small class="callButton"><button ion-button small>Call</button></a>: 9-1-1 
+  <br><h4 text-center>Respond immediately</h4><br><br><p text-center>
+    <a href="tel:911" center ion-button round  small class="callButton"><button ion-button small>Call</button></a><br>9-1-1 
   <br><br>OR<br><br> your local emergency number</p>
-</div>
- </div>
-
 </div>
  <button ion-button block on-click="GoToMap()" round large>Explore My Area</button>
 <button ion-button block on-click="GoToBestPractice()" round large>Patient Care - Best Practice</button>
