--- a/src/pages/last-known-well/last-known-well.html
+++ b/src/pages/last-known-well/last-known-well.html
@@ -41,7 +41,7 @@
     <!--Break between inputs and the button to make it consistent-->
     <div class="spacer" style="height:7vh;" id="lastKnownWell-spacer7"></div>
     <br>
-    <button  id="lastKnownWell-button2" ion-button [disabled]="!timeForm.valid" type="submit" block round large><!--The button will not be acessable until a value is entered for the time-->
+    <button  id="lastKnownWell-button2" ion-button [disabled]="!timeForm.valid" type="submit" block round large><!--The button will not be accessible until a value is entered for the time-->
       Next
     </button>
   </form>
