--- a/src/pages/next-steps/next-steps.html
+++ b/src/pages/next-steps/next-steps.html
@@ -88,14 +88,14 @@
       <br><b><span style="font-size: large;">&</span></b><br><br>
       <p><b><u><span style="font-size: large;">Send:</span></u></b><br>Urgent Referral to TBRHSC Stroke Prevention Clinic<br><span class="Call">Fax: 807-684-5883</span></p><br><br>
     </div>
-      <h5><i>Reference:</i></h5><p><i>NWO TIA and Mild Non-Disabiling Stroke TRIAGE Algorithm</i></p>
+      <h5><i>Reference:</i></h5><p><i>NWO TIA and Mild Non-Disabling Stroke TRIAGE Algorithm</i></p>
     </div>
     <div *ngSwitchCase="10" style="font-size: medium;">
       <div text-center>
-      <br><p><b><u><span style="font-size: large;">Consult:</span></u></b><br>The NWO TIA and Mild Non-Disabiling Stroke Triage Algorithm</p><br>
+      <br><p><b><u><span style="font-size: large;">Consult:</span></u></b><br>The NWO TIA and Mild Non-Disabling Stroke Triage Algorithm</p><br>
       <p><b><u><span style="font-size: large;">Refer to:</span></u></b><br>The section for >48 hours</p><br><br>
     </div>
-      <h5><i>Reference:</i></h5><p><i>NWO TIA and Mild Non-Disabiling Stroke TRIAGE Algorithm. Specifically the section for >48 hours</i></p>
+      <h5><i>Reference:</i></h5><p><i>NWO TIA and Mild Non-Disabling Stroke TRIAGE Algorithm. Specifically the section for >48 hours</i></p>
     </div>
   </div>
   <button ion-button block on-click="GoToMap()" round large>Map My Route</button>
