--- a/src/pages/patient-location/patient-location.html
+++ b/src/pages/patient-location/patient-location.html
@@ -10,7 +10,7 @@
     </ion-buttons>
   </ion-navbar>
 
-  <components-timer></components-timer><!--the timer is a component or a developer defined entry it does not take any arguments and because declaring it on every page made it reset each time the data is controlled by the data provider and just acessed by the component-->
+  <components-timer></components-timer><!--the timer is a component or a developer defined entry it does not take any arguments and because declaring it on every page made it reset each time the data is controlled by the data provider and just accessed by the component-->
 
 </ion-header>
 <ion-content no-bounce padding  style="height: 100vh;"id="page1"><!--vh is currently used to show the total viewable height but may need to be changed as it does not always work -->
