-Modified the pages in order to have the slide for menu disabled on the front page and all mapping pages to avoid confusion

--- a/src/pages/map-explore/map-explore.html
+++ b/src/pages/map-explore/map-explore.html
@@ -5,8 +5,8 @@
       <ion-title>
       Map<!-- the title of the page -->
       </ion-title>
-      <ion-buttons end>
-        <button ion-button icon-only menuToggle right>
+      <ion-buttons end >
+        <button ion-button swipeEnabled="false" icon-only menuToggle right>
           <ion-icon name='menu'></ion-icon>
         </button>
       </ion-buttons>
