- added the search bar still need functionality

--- a/src/pages/map-explore/map-explore.html
+++ b/src/pages/map-explore/map-explore.html
@@ -58,8 +58,9 @@
     </ion-item>
 
   </div>
-
+  <ion-searchbar #searchBar (ionInput)="SearchInput($event)" [(ngModel)]="SearchResults"></ion-searchbar>
   <div #Map class="map" [style.height]=height></div>
+  
 
        
 </ion-content>
